syntax = "proto3";

service ProductService {
    rpc CreateProduct(ProductCreateRequest) returns (ProductCreateResponse) {}

}

message ProductCreateRequest {
    string product_name = 1;
    string product_desc = 2;
    string product_price = 3;
    string product_type = 4;
    string product_thumb = 5;
    int32 product_quantity = 6;
    ProductAttributes product_attributes = 7;
}

message ProductAttributes {
    string brand = 1;
    string size = 2;
    string material = 3;
}

message ProductCreateResponse {
    string _id = 1;
    int32 product_shop = 2;
    string product_name = 3;
    string product_desc = 4;
    string product_price = 5;
    string product_type = 6;
    string product_thumb = 7;
    int32 product_quantity = 8;
    ProductAttributes product_attributes = 9;
}
