syntax = "proto3";

service NotificationService {
    rpc TestConnection(Empty) returns (Empty) {}
}

message Empty {}